# rust_axum_sqlite

./: Cargo.toml  README.md  database.db  database.db-shm  nixpacks.toml
migrations/: 20250112235108_items_tabel.sql  20250115230811_words.sql
src/: api.rs  db.rs  main.rs  model.rs
