[package]
name = "thiserror-vs-anyhow"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0.10"
tokio = { version = "1.43.0", features = ["full"] } # { version = "1.43.0" }
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
env_logger = "0.11.6"
tower-http = { version = "0.6.2", features = ["cors"] }